--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,122 @@
-.App {
-  text-align: center;
+*{
+  padding: 0%;
+  margin: 0%;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.landingPage {
   min-height: 100vh;
+  background: #000000;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  overflow: hidden;
+  background: url("starry.jpg");
+} 
+
+.landingPageName {
+  color: azure;
+  position: fixed;
+  top:30px;
+  font-size: 50px;
+  text-align: top;
+  align-self: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.resumeText {
+  color: rgb(0, 0, 0);;
+  padding: 20px;
+  font-size: 23px;
+  text-align: center;
+  border-width: 5px;
+  background-color: rgba(255, 255, 255, 0.93);
+  border: solid rgb(201, 75, 75);
+  border-width: 4px;
+  border-radius: 30px;
+  display: flex;
+  height: 400px;
+  width: 700px;
+  top: 250px;
+  align-self: center;
+  justify-content: space-around;
+  position: fixed;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.resumeTextHidden {
+  visibility: hidden;
+}
+
+.showResume {
+  height: 100px;
+  width: 100px;
+  position: relative;
+  border-radius: 30px;
+  border-width: 5px;
+  border-color: rgb(201, 75, 75);
+  font-size: 20px;
+  background-color: rgb(54, 53, 53, 0.7);
+  color:lavenderblush;
+  font-weight: bold;
+}
+
+.showProjects{
+  height: 100px;
+  width: 100px;
+  position: relative;
+  border-radius: 30px;
+  border-width: 5px;
+  border-color: rgb(201, 75, 75);
+  font-size: 20px;
+  background-color: rgb(54, 53, 53, 0.7);
+  color:lavenderblush;
+  font-weight: bold;
+}
+
+.buttons {
+  height: 130px;
+  width: 400px;
+  position: fixed;
+  top: 120px;
+  display: inline-flex;
+  justify-content: space-around;
+  padding-left: 40px;
+  padding-right:40px; 
+  font-family: 'Roboto', sans-serif;
+}
+
+.projectText {
+  color: rgb(0, 0, 0);;
+  padding: 15px;
+  font-size: 23px;
+  text-align: center;
+  border-width: 5px;
+  background-color: rgb(255, 255, 255, 0.93);
+  border: solid rgb(201, 75, 75);
+  border-width: 4px;
+  border-radius: 30px;
+  display: flex;
+  height: 400px;
+  width: 700px;
+  top: 250px;
+  align-self: center;
+  justify-content: space-around;
+  position: fixed;
+  line-height: 30px;
+}
+
+.projectTextHidden {
+  visibility: hidden;
+}
+
+.projectTextDiv {
+  color: black;
+  font-size: 20px;
+}
+
+.titlesOfText {
+  font-size: 30px;
+}
+
+.text {
+  line-height: 30px;
 }
