--- a/src/App.css
+++ b/src/App.css
@@ -40,10 +40,7 @@
   align-self: center;
   justify-content: space-around;
   position: fixed;
-}
-
-.resumeTextHidden {
-  visibility: hidden;
+  z-index: 0;
 }
 
 .showResume {
@@ -89,11 +86,10 @@
 
 .projectText {
   color: rgb(0, 0, 0);;
-  padding: 15px;
+  padding: 20px;
   font-size: 23px;
   text-align: center;
-  border-width: 5px;
-  background-color: rgb(255, 255, 255, 0.93);
+  background-color: rgba(255, 255, 255, 0.93);
   border: solid rgb(201, 75, 75);
   border-width: 4px;
   border-radius: 30px;
@@ -104,24 +100,16 @@
   align-self: center;
   justify-content: space-around;
   position: fixed;
-  line-height: 30px;
+  z-index: 0;
 }
 
-.projectTextHidden {
+.Hidden {
   visibility: hidden;
 }
 
 .projectTextDiv {
   color: black;
   font-size: 20px;
-}
-
-.titlesOfText {
-  font-size: 30px;
-}
-
-.text {
-  line-height: 30px;
 }
 
 .menuBar {
@@ -132,6 +120,7 @@
   border-bottom: solid rgb(201, 75, 75);
   border-width: 4px;
   border-radius: 15px;
+  
 }
 
 .menuButtons {
@@ -204,7 +193,7 @@
   position: relative;
   align-self: center;
   margin: auto;
-  z-index: 1;
+  z-index: -2;
 }
 
 .contactText {
@@ -219,10 +208,14 @@
   display: flex;
   height: 80vh;
   width: 80%;
-  top: 140px;
+  top: 150px;
   justify-content: space-around;
   position: relative;
   align-self: center;
   margin: auto;
   z-index: 1;
+}
+
+.text { 
+  line-height: 160%;
 }
