--- a/src/App.css
+++ b/src/App.css
@@ -24,25 +24,6 @@
   align-self: auto;
 }
 
-.resumeText {
-  color: rgb(0, 0, 0);;
-  padding: 20px;
-  font-size: 23px;
-  text-align: center;
-  background-color: rgba(255, 255, 255, 0.93);
-  border: solid rgb(201, 75, 75);
-  border-width: 4px;
-  border-radius: 30px;
-  display: flex;
-  height: 60%;
-  width: 60%;
-  top: 280px;
-  align-self: center;
-  justify-content: space-around;
-  position: fixed;
-  z-index: 0;
-}
-
 .showResume {
   height: 100px;
   width: 100px;
@@ -84,7 +65,7 @@
   font-family: 'Roboto', sans-serif;
 }
 
-.projectText {
+.centerButtonsText {
   color: rgb(0, 0, 0);;
   padding: 20px;
   font-size: 23px;
@@ -105,11 +86,6 @@
 
 .Hidden {
   visibility: hidden;
-}
-
-.projectTextDiv {
-  color: black;
-  font-size: 20px;
 }
 
 .menuBar {
@@ -153,7 +129,6 @@
   justify-content: space-around;
   font-family: 'Roboto', sans-serif;
   position: fixed;
-
 }
 
 .gitHub {
@@ -176,7 +151,7 @@
   right: 110px;
 }
 
-.aboutText {
+.menuBarText {
   color: rgb(0, 0, 0);;
   padding: 20px;
   font-size: 23px;
@@ -194,26 +169,6 @@
   align-self: center;
   margin: auto;
   z-index: -2;
-}
-
-.contactText {
-  color: rgb(0, 0, 0);;
-  padding: 20px;
-  font-size: 23px;
-  text-align: center;
-  background-color: rgba(255, 255, 255, 0.98);
-  border: solid rgb(201, 75, 75);
-  border-width: 4px;
-  border-radius: 30px;
-  display: flex;
-  height: 80vh;
-  width: 80%;
-  top: 150px;
-  justify-content: space-around;
-  position: relative;
-  align-self: center;
-  margin: auto;
-  z-index: 1;
 }
 
 .text { 
