--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: space-around;
   overflow: hidden;
-  background: url("starry.jpg");
+  background: url("./images/starry.jpg");
 } 
 
 .landingPageName {
@@ -132,7 +132,7 @@
 }
 
 .gitHub {
-  background: url(githubLogo.png);
+  background: url("./images/githubLogo.png");
   height: 70px;
   width: 70px;
   background-size: contain;
@@ -142,7 +142,7 @@
 }
 
 .linkedIn {
-  background: url(linkedinLogo.png);
+  background: url("./images/linkedinLogo.png");
   height: 70px;
   width: 70px;
   background-size: contain;
