--- a/src/App.css
+++ b/src/App.css
@@ -187,7 +187,27 @@
 }
 
 @media screen and (max-width: 480px) {
+  .landingPage {
+    min-height: 80vh;
+  }
+  
   .landingPageName {
-    font-size: 40px;
+    font-size: 60px;
+    height: 150px;
+  }
+
+  .centerButtonsText {
+    width: 90%;
+    height: 80%;
+    overflow-y:scroll;
+    font-size: 20px;
+    top: 200px;
+  }
+
+  .menuBarText {
+    left: 0px;
+    width: 90%;
+    height: 70%;
+
   }
 }
