--- a/src/App.css
+++ b/src/App.css
@@ -188,26 +188,34 @@
 
 @media screen and (max-width: 480px) {
   .landingPage {
-    min-height: 80vh;
+    min-height: 95vh;
   }
   
   .landingPageName {
-    font-size: 60px;
+    font-size: 50px;
     height: 150px;
   }
 
   .centerButtonsText {
     width: 90%;
-    height: 80%;
+    height: 70%;
     overflow-y:scroll;
     font-size: 20px;
     top: 200px;
   }
 
   .menuBarText {
-    left: 0px;
+    left: 10px;
     width: 90%;
-    height: 70%;
+    height: 80%;
+    overflow-y:scroll;
+  }
+  
+  .menuButtonsSub {
+    font-size: 25px;
+  }
 
+  .menuButtons {
+    align-content: center;
   }
 }
