--- a/src/App.css
+++ b/src/App.css
@@ -186,14 +186,14 @@
   text-underline-offset: 7px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 900px) {
   .landingPage {
-    min-height: 95vh;
+    min-height: 100vh;
   }
   
   .landingPageName {
     font-size: 50px;
-    height: 150px;
+    height: 50px;
   }
 
   .centerButtonsText {
@@ -205,17 +205,32 @@
   }
 
   .menuBarText {
-    left: 10px;
+    left: 25px;
     width: 90%;
     height: 80%;
     overflow-y:scroll;
   }
+
+  .text {
+    font-size: 20px;
+  }
   
   .menuButtonsSub {
     font-size: 25px;
+    align-content: center;
   }
 
   .menuButtons {
     align-content: center;
+    left: 90px;
+    top: 40px;
+    right: 170px;
+    padding: none;
+    width: 60%;
+    align-self: center;
+  }
+
+  .underLine {
+    font-size: 25px;
   }
 }
